fix(nav) broken on github pages

--- a/src/css/finder-stylesheet.css
+++ b/src/css/finder-stylesheet.css
@@ -79,7 +79,7 @@ body{
 } */
 
 .page-content{
-    margin-top: 4%;
+    margin-top: 4.5%;
 }
 
 .recipe-card{
